--- a/index.html
+++ b/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="jp">
 	<head><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-		<style> @font-face {
-  font-family: mPlus;
-  src: url(http://mplus-fonts.osdn.jp/webfonts/general-j/);
-}
-
-div {
-  font-family: mPlus;
-} </style>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-	<title>ＵｏＭトランスジェンダーキャンペーン</title>
-	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-	<div class="container">
-		<h1>ＵｏＭトランスジェンダーキャンペーン</h1>
-		<h2>ノンバイナリーで、トランスジェンダー学生の解放について戦っています。</h2>
-	</div>
-</body>
-</html>
+	<link rel="stylesheet" type="text/css"
+		href="http://mplus-fonts.sourceforge.jp/webfonts/basic_latin/mplus_webfonts.css">
+		<link rel="stylesheet" type="text/css"
+			href="http://mplus-fonts.sourceforge.jp/webfonts/general-j/mplus_webfonts.css">
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+			<title>ＵｏＭトランスジェンダーキャンペーン</title>
+			<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+		</head>
+		<body>
+			<div class="container">
+				<h1>ＵｏＭトランスジェンダーキャンペーン</h1>
+				<h2>ノンバイナリーで、トランスジェンダー学生の解放について戦っています。</h2>
+			</div>
+		</body>
+	</html>
