added background colour

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 				<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 				<title>ＵｏＭトランスジェンダーキャンペーン</title>
 				<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+				<style>
+					body {
+  background-color: #f9ff84;
+}
+</style>
 			</head>
 			<body>
 				<div>
