--- a/index.html
+++ b/index.html
@@ -13,9 +13,71 @@
 					body {
   background-color: #f9ff84;
 }
+/* Style the header with a grey background and some padding */
+.header {
+  overflow: hidden;
+  background-color: #E0E677;
+  padding: 20px 10px;
+}
+
+/* Style the header links */
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+/* Change the background color on mouse-over */
+.header a:hover {
+  background-color: #BBBF63;
+  color: black;
+}
+
+/* Style the active/current link*/
+.header a.active {
+  background-color: #7C8042;
+  color: white;
+}
+
+/* Float the link section to the right */
+.header-right {
+  float: right;
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-right {
+    float: none;
+  }
+}
 </style>
 			</head>
 			<body>
+				<div class="header">
+  <a href="#default" class="logo"><img src="logo.png" alt="Logo of the UoM Trans Campaign, a bee with stripes on its abdomen with the colours of the trans pride flag.">
+ ＵｏＭトランスジェンダーキャンペーン</a>
+  <div class="header-right">
+    <a class="active" href="#home">ホーム</a>
+    <a href="#contact">連絡</a>
+    <a href="#about">私たちに関して</a>
+  </div>
+</div>
 				<div>
 					<h1>ＵｏＭトランスジェンダーキャンペーン</h1>
 					<h2>ノンバイナリーで、トランスジェンダー学生の解放について戦っています。</h2>
