fixed logo formatting

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</style>
 			</head>
 			<body>
-			<div class="header"> ＵｏＭトランスジェンダーキャンペーン</a>
+			<div class="header"><div class="logo">ＵｏＭトランスジェンダーキャンペーン</div>
 			<div class="header-right">
 				<a class="active" href="#home">ホーム</a>
 				<a href="#contact">連絡</a>
