removed redundant text from main body

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 			</div>
 		</div>
 		<div>
-			<h1>ＵｏＭトランスジェンダーキャンペーン</h1>
-			<h2>ノンバイナリーで、トランスジェンダー学生の解放について戦っています。</h2>
+			<p>ノンバイナリーで、トランスジェンダー学生の解放について戦っています。</p>
 		</div>
 	</body>
 </html>
