add padding to the header

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				overflow: hidden;
 				background-color: #E0E677;
 				padding: 20px 10px;
+				border-radius: 4px;
 				}
 				.header a {
 				float: left;
@@ -56,15 +57,15 @@
 				</style>
 			</head>
 			<body>
-			<div class="header"><a href="#default" class="logo">ＵｏＭトランスジェンダーキャンペーン</a>
-			<div class="header-right">
-				<a class="active" href="#home">ホーム</a>
-				<a href="#contact">連絡</a>
-				<a href="#about">私たちに関して</a>
+				<div class="header"><a href="#default" class="logo">ＵｏＭトランスジェンダーキャンペーン</a>
+				<div class="header-right">
+					<a class="active" href="#home">ホーム</a>
+					<a href="#contact">連絡</a>
+					<a href="#about">私たちに関して</a>
+				</div>
 			</div>
-		</div>
-		<div>
-			<p>ノンバイナリーで、トランスジェンダー学生の解放について戦っています。</p>
-		</div>
-	</body>
-</html>
+			<div>
+				<p>ノンバイナリーで、トランスジェンダー学生の解放について戦っています。</p>
+			</div>
+		</body>
+	</html>
