add automatic resizing to logo text

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 				.header a.logo {
 				font-size: 25px;
 				font-weight: bold;
+				max-width: 80vw;
 				}
 				.header a:hover {
 				background-color: #BBBF63;
