add background colour and shape to p

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 				float: none;
 				}
 				}
+				.p {
+					background-color: #EDF37E;
+					padding: 20px 10px;
+				border-radius: 4px;
+				}
 				</style>
 			</head>
 			<body>
