--- a/index.html
+++ b/index.html
@@ -60,8 +60,25 @@
 					padding: 20px 10px;
 				border-radius: 4px;
 				}
+				footer {
+					{
+				overflow: hidden;
+				text-align: center;
+				background-color: #E0E677;
+				padding: 10px 5px;
+				border-radius: 4px;
+				}
+				}
 				</style>
+				<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/vaakash/socializer@2f749eb/css/socializer.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
 			</head>
+			<script src="https://cdn.jsdelivr.net/gh/vaakash/socializer@2f749eb/js/socializer.min.js"></script>
+<script>
+(function(){
+    socializer( '.socializer' );
+}());
+</script>
 			<body>
 				<div class="header"><a href="#default" class="logo">ＵｏＭトランスジェンダーキャンペーン</a>
 				<div class="header-right">
@@ -73,5 +90,9 @@
 			<div>
 				<p>ノンバイナリーで、トランスジェンダー学生の解放について戦っています。</p>
 			</div>
+			<div>
+				<footer>
+					<div class="socializer" data-features="32px,squircle,opacity,fluid,icon-white,bg-dark,pad" data-sites="facebook,twitter,email,shortlink" data-meta-facebook="https://www.facebook.com/uomtrans" data-meta-twitter="https://www.twitter.com/uomtrans" data-meta-email="mailto:uomtranscampaign@gmail.com" data-meta-shortlink="https://uomtrans.wordpress.com"></div>
+</footer>
 		</body>
 	</html>
