updated body text

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				</div>
 			</div>
 			<div>
-				<p>ノンバイナリーで、トランスジェンダー学生の解放について戦っています。</p>
+				<p>マンチェスター大学でトランスジェンダーでノンバイナリーな学生の解放のために戦っています。</p>
 			</div>
 				<footer>
 					<div class="socializer" data-features="32px,squircle,opacity,fluid,icon-white,bg-dark,pad" data-sites="facebook,twitter,email,shortlink" data-meta-facebook="https://www.facebook.com/uomtrans" data-meta-twitter="https://www.twitter.com/uomtrans" data-meta-email="mailto:uomtranscampaign@gmail.com" data-meta-shortlink="https://uomtrans.wordpress.com"></div>
