fixed footer css

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
 					padding: 20px 10px;
 				border-radius: 4px;
 				}
-				footer {
+				.footer {
 					{
+						position: fixed;
 				overflow: hidden;
 				text-align: center;
 				background-color: #E0E677;
