change socialiser class

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					padding: 20px 10px;
 				border-radius: 4px;
 				}
-				.footer {
+				.socializer {
 					{
 						position: fixed;
 				text-align: center;
@@ -91,8 +91,6 @@
 			<div>
 				<p>マンチェスター大学でトランスジェンダーでノンバイナリーな学生の解放のために戦っています。</p>
 			</div>
-			<div class="footer">
 				<div class="socializer" data-features="32px,squircle,opacity,fluid,icon-white,bg-dark,pad" data-sites="facebook,twitter,email,shortlink" data-meta-facebook="https://www.facebook.com/uomtrans" data-meta-twitter="https://www.twitter.com/uomtrans" data-meta-email="mailto:uomtranscampaign@gmail.com" data-meta-shortlink="https://uomtrans.wordpress.com"></div>
-			</div>
 		</body>
 	</html>
