adding social media links

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 			href="http://mplus-fonts.sourceforge.jp/webfonts/basic_latin/mplus_webfonts.css">
 			<link rel="stylesheet" type="text/css"
 				href="http://mplus-fonts.sourceforge.jp/webfonts/general-j/mplus_webfonts.css">
+				<script src="https://kit.fontawesome.com/7cea88035e.js" crossorigin="anonymous"></script>
 				<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 				<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 				<title>ＵｏＭトランスジェンダーキャンペーン</title>
@@ -60,7 +61,7 @@
 					padding: 20px 10px;
 				border-radius: 4px;
 				}
-				.socializer {
+				.footer {
 					{
 						position: fixed;
 				text-align: center;
@@ -91,6 +92,13 @@
 			<div>
 				<p>マンチェスター大学でトランスジェンダーでノンバイナリーな学生の解放のために戦っています。</p>
 			</div>
-				<div class="socializer" data-features="32px,squircle,opacity,fluid,icon-white,bg-dark,pad" data-sites="facebook,twitter,email,shortlink" data-meta-facebook="https://www.facebook.com/uomtrans" data-meta-twitter="https://www.twitter.com/uomtrans" data-meta-email="mailto:uomtranscampaign@gmail.com" data-meta-shortlink="https://uomtrans.wordpress.com"></div>
+			<div class="socializer" data-features="32px,squircle,opacity,fluid,icon-white,bg-dark,pad" data-sites="facebook,twitter,email,shortlink" data-meta-facebook="https://www.facebook.com/uomtrans" data-meta-twitter="https://www.twitter.com/uomtrans" data-meta-email="mailto:uomtranscampaign@gmail.com" data-meta-shortlink="https://uomtrans.wordpress.com"></div>
+			<div class="footer">
+				<a href="https://www.facebook.com/uomtrans"><i class="fab fa-facebook"></i></a>
+				<a href="https://m.me/uomtrans"><i class="fab fa-facebook-messenger"></i></a>
+				<a href="https://www.twitter.com/uomtrans"><i class="fab fa-facebook"></i></a>
+				<a href="https://uomtrans.wordpress.com"><i class="fab fa-wordpress"></i></a>
+				<a href="mailto:uomtranscampaign@gmail.com"><i class="fas fa-at"></i></a>
+			</div>
 		</body>
 	</html>
