add formatting to icons

--- a/index.html
+++ b/index.html
@@ -71,6 +71,28 @@
 				width: 100%;
 				}
 				}
+				.fab {
+				padding: 20px;
+				font-size: 30px;
+				width: 50px;
+				text-align: center;
+				text-decoration: none;
+				color: black;
+				}
+				.fab:hover {
+				opacity: 0.7;
+				}
+				.fas {
+				padding: 20px;
+				font-size: 30px;
+				width: 50px;
+				text-align: center;
+				text-decoration: none;
+				color: black;
+				}
+				.fas:hover {
+				opacity: 0.7;
+				}
 				</style>
 				<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/vaakash/socializer@2f749eb/css/socializer.min.css">
 				<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
