--- a/index.html
+++ b/index.html
@@ -63,11 +63,9 @@
 				}
 				.footer {
 					{
-						position: fixed;
-				text-align: center;
 				background-color: #E0E677;
-				left: 0;
-				bottom: 0;
+				display: flex;
+				justify-content: center;
 				width: 100%;
 				}
 				}
