fix twitter icon

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			<div class="footer">
 				<a href="https://www.facebook.com/uomtrans"><i class="fab fa-facebook"></i></a>
 				<a href="https://m.me/uomtrans"><i class="fab fa-facebook-messenger"></i></a>
-				<a href="https://www.twitter.com/uomtrans"><i class="fab fa-facebook"></i></a>
+				<a href="https://www.twitter.com/uomtrans"><i class="fab fa-twitter-square"></i></a>
 				<a href="https://uomtrans.wordpress.com"><i class="fab fa-wordpress"></i></a>
 				<a href="mailto:uomtranscampaign@gmail.com"><i class="fas fa-at"></i></a>
 			</div>
