add favicon and redefine header links

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
 			}());
 			</script>
 			<body>
-				<div class="header"><a href="#default" class="logo">ＵｏＭトランスジェンダーキャンペーン</a>
+				<div class="header"><a href="/" class="logo">ＵｏＭトランスジェンダーキャンペーン</a>
 				<div class="header-right">
-					<a class="active" href="#home">ホーム</a>
-					<a href="#contact">連絡</a>
-					<a href="#about">私たちに関して</a>
+					<a class="active" href="#">ホーム</a>
+					<a href="contact">連絡</a>
+					<a href="about">私たちに関して</a>
 				</div>
 			</div>
 			<div>
