--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 				</style>
 				<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/vaakash/socializer@2f749eb/css/socializer.min.css">
 				<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
+				<link href="https://recursively-enumerable.github.io/uomtrans-jp/favicon.ico" rel="icon" type="image/x-icon" />
 			</head>
 			<script src="https://cdn.jsdelivr.net/gh/vaakash/socializer@2f749eb/js/socializer.min.js"></script>
 			<script>
@@ -100,7 +101,7 @@
 			}());
 			</script>
 			<body>
-				<div class="header"><a href="/" class="logo">ＵｏＭトランスジェンダーキャンペーン</a>
+				<div class="header"><a href="/uomtrans-jp" class="logo">ＵｏＭトランスジェンダーキャンペーン</a>
 				<div class="header-right">
 					<a class="active" href="#">ホーム</a>
 					<a href="contact">連絡</a>
