--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
 			<div>
 				<p>あなたのトランスジェンダーな役員２０２０年から２０２１年までは：
 				<ul><li>ローザ・クハースカと</li>
-				<li>ジューノ・ロバーツです。</li></u></p>
+				<li>ジューノ・ロバーツです。</li></ul></p>
 			</div>
 			<div class="socializer" data-features="32px,squircle,opacity,fluid,icon-white,bg-dark,pad" data-sites="facebook,twitter,email,shortlink" data-meta-facebook="https://www.facebook.com/uomtrans" data-meta-twitter="https://www.twitter.com/uomtrans" data-meta-email="mailto:uomtranscampaign@gmail.com" data-meta-shortlink="https://uomtrans.wordpress.com"></div>
 			<div class="footer">
