add list of campaign issues

--- a/about.html
+++ b/about.html
@@ -109,7 +109,15 @@
 				</div>
 			</div>
 			<div>
-				<p>マンチェスター大学の学生会館は２０１７年でこのキャンペーンを作りました。私たちは自主的なキャンペーンですから、私たちの仕事がトランスジェンダーな学生と当選の役員が定めています。<a href="https://manchesterstudentsunion.com/diversity-and-liberation/trans-students-campaign">マンチェスター大学の学生会館のウェブサイト</a>は一段と情報があります。
+				<p>マンチェスター大学の学生会館は２０１７年でこのキャンペーンを作りました。私たちは自主的なキャンペーンですから、私たちの仕事がトランスジェンダーな学生と当選の役員が定めています。<a href="https://manchesterstudentsunion.com/diversity-and-liberation/trans-students-campaign">マンチェスター大学の学生会館のウェブサイト</a>は一段と情報があります。</p>
+				<br>
+				<p><b>問題点を現在運動しています：</b></p>
+					<br>
+					<ul>
+						<li>スポーツでトランスジェンダーな包括</li>
+						<li>大学キャンパスで中性のトイレ</li>
+						<li>トランスジェンダーな学生ために簡単な改名</li>
+					</ul>
 			</div>
 			<div class="socializer" data-features="32px,squircle,opacity,fluid,icon-white,bg-dark,pad" data-sites="facebook,twitter,email,shortlink" data-meta-facebook="https://www.facebook.com/uomtrans" data-meta-twitter="https://www.twitter.com/uomtrans" data-meta-email="mailto:uomtranscampaign@gmail.com" data-meta-shortlink="https://uomtrans.wordpress.com"></div>
 			<div class="footer">
