--- a/about.html
+++ b/about.html
@@ -111,8 +111,7 @@
 			<div>
 				<p>マンチェスター大学の学生会館は２０１７年でこのキャンペーンを作りました。私たちは自主的なキャンペーンですから、私たちの仕事がトランスジェンダーな学生と当選の役員が定めています。<a href="https://manchesterstudentsunion.com/diversity-and-liberation/trans-students-campaign">マンチェスター大学の学生会館のウェブサイト</a>は一段と情報があります。</p>
 				<br>
-				<p><b>問題点を現在運動しています：</b></p>
-					<br>
+				<b>問題点を現在運動しています：</b></p>
 					<ul>
 						<li>スポーツでトランスジェンダーな包括</li>
 						<li>大学キャンパスで中性のトイレ</li>
