added links to homepage

--- a/index.html
+++ b/index.html
@@ -109,7 +109,12 @@
 				</div>
 			</div>
 			<div>
-				<p>マンチェスター大学でトランスジェンダーでノンバイナリーな学生の解放のために戦っています。</p>
+				<p>マンチェスター大学でトランスジェンダーでノンバイナリーな学生の解放のために戦っています。下で便利なリンクがあります：</p>
+				<ul>
+					<li><a href="https://linktr.ee/uomtrans">リンク木</a></li>
+					<li><a href="https://www.facebook.com/groups/NUSTransStudentCampaignersNetwork">ＮＵＳトランスジェンダーな学生運動員のネット</a></li>
+					<li><a href="https://twitter.com/transMAMCR">トランズジェンダーな共催マンチェスター</a></li>
+					<li><a href="https://manchesterstudentsunion.com/resources/being-trans-at-manchester/download_attachment">マンチェスター大学でトランスジェンダーあるのガイド</a></li>
 			</div>
 			<div class="socializer" data-features="32px,squircle,opacity,fluid,icon-white,bg-dark,pad" data-sites="facebook,twitter,email,shortlink" data-meta-facebook="https://www.facebook.com/uomtrans" data-meta-twitter="https://www.twitter.com/uomtrans" data-meta-email="mailto:uomtranscampaign@gmail.com" data-meta-shortlink="https://uomtrans.wordpress.com"></div>
 			<div class="footer">
